ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	change-property \
	change-inputmode-icon \
	change-inputmode-symbol \
	create-component \
	engine-icon \
	hybrid-engine \
	nested-menu \
	radio-menu \
	radio-menu-delay \
	radio-menu-from-array \
	radio-menu-flickered \
	radio-menu-imeonoff \
	radio-menu-noneedtoupdate \
	radio-menu-stall \
	simple-menu \
	$(NULL)
